Correct vertical align of progress element

--- a/src/_forms.css
+++ b/src/_forms.css
@@ -38,5 +38,5 @@ button,
 
 progress {
   max-width: 100%;
-  vertical-align: middle;
+  vertical-align: baseline;
 }
